...
            "value": "Charge"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "充电"
          }
        },
        "zh-Hant": {
          "stringUnit": {
            "state": "translated",
            "value": "充電"
...
            "state": "translated",
            "value": "當前警報"
          }
        }
      }
    },
    "Current Charge": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Current Charge"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "当前充电"
          }
        },
        "zh-Hant": {
          "stringUnit": {
            "state": "translated",
            "value": "當前充電"
          }
        }
      }
    },
    "Current SOC": {
      "localizations": {
...
    },
    "vehicle.generation.model-3-early": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Model 3 (2017-2020)"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "Model 3（2017-2020）"
...
            "value": "Needs calibration"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "需要校准"
          }
        },
        "zh-Hant": {
          "stringUnit": {
            "state": "translated",
            "value": "需要校準"
...
            "value": "No matching activity"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "没有符合筛选的动态"
          }
        },
        "zh-Hant": {
          "stringUnit": {
            "state": "translated",
            "value": "沒有符合篩選的動態"
...
